@@ -1,3 +1,8 @@
+2018-02-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* testsuite/libgomp.oacc-c-c++-common/pr84217.c (abort)
+	[__cplusplus]: Declare extern "C".
+
 2018-02-07  Tom de Vries  <tom@codesourcery.com>
 
 	PR libgomp/84217
